# export-wechat-emoji

./: .gitignore  CHANGELOG.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml  publish.yml  release.yml
src/: App.css  App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/consts/: text.ts
src/services/: archive.ts  downloader.ts  exporter.ts  stodownload.ts  wechat.ts
src/utils/: timer.ts  url.ts
